--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                 </div>
                 <h2 class="experience-sub-title project title">Classroom Artefacts</h2>
                 <div class="btn-container">
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://drive.google.com/drive/folders/1zDw_jvFQuX7xWLujFTS_EtwSrInCMr2H?usp=sharing'">
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='./assets/Classroom Artefacts.pdf'">
                         Explore
                     </button>
                     <button class="btn btn-color-2 project-btn" onclick="location.href='https://drive.google.com/drive/folders/114sw30ap0c6BogHBSEjHbC_-CI6SzgWH?usp=sharing'">
@@ -351,7 +351,7 @@
                 </div>
                 <h2 class="experience-sub-title project title">Fellow Mentor Artefacts</h2>
                 <div class="btn-container">
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://drive.google.com/drive/folders/1TzL-boynzKdQpKgvP4oK1holSnAQqvl9?usp=sharing'">
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='./assets/Fellow mentor Artefacts.pdf'">
                         Explore
                     </button>
                     <button class="btn btn-color-2 project-btn" onclick="location.href='https://drive.google.com/drive/folders/1t-mU_w12hy_yfmUYq1Gp-Q-EREgth79d?usp=sharing'">
