--- a/index.html
+++ b/index.html
@@ -90,8 +90,9 @@
                 </div>
             </div>
         </div>
-        />
     </section>
+    <br/>
+    <br/>
     <section id="experience">
         <p class="section__text__p1">Explore My</p>
         <h1 class="title">Experience</h1>
@@ -99,7 +100,7 @@
             <div class="about-containers">
                 <div class="details-containers">
                     <h2 class="experience-sub-title">Fellow</h2>
-                    <p><br><br><br><br>Led a pivotal role in achieving substantial literacy gains, averaging 2 years in a first-year intervention classroom. Facilitated the transition of all students from emergent level, with 81% attaining grade-level or above proficiency.<br><br>Demonstrated noteworthy development in foundational numeracy skills across two consecutive years, Elevated proficiency from initial levels to an impressive 80%, Continual advancements are underway.<br><br>Collaborated with multiple stakeholders to enhance learning outcomes, elevating parental investment from 37% to 94%. Tailored diverse communication channels for optimized engagement.<br><br>Facilited a group of 15 fellows to discover their personal theory of change and explore movement building.<br><br>Spearheaded holistic initiatives to cultivate and improve classroom readiness for 30+ volunteers, Designed instructional programs for volunteer let growth. Identified pivotal opportunities for their professional growth.</p>
+                    <p>Led a pivotal role in achieving substantial literacy gains, averaging 2 years in a first-year intervention classroom. Facilitated the transition of all students from emergent level, with 81% attaining grade-level or above proficiency.<br><br>Demonstrated noteworthy development in foundational numeracy skills across two consecutive years, Elevated proficiency from initial levels to an impressive 80%, Continual advancements are underway.<br><br>Collaborated with multiple stakeholders to enhance learning outcomes, elevating parental investment from 37% to 94%. Tailored diverse communication channels for optimized engagement.<br><br>Facilited a group of 15 fellows to discover their personal theory of change and explore movement building.<br><br>Spearheaded holistic initiatives to cultivate and improve classroom readiness for 30+ volunteers, Designed instructional programs for volunteer let growth. Identified pivotal opportunities for their professional growth.</p>
                     <div class="article-container">
                         <article>
                             <img src="./assets/Experience  Strategic Planning skill icon.png" alt="Experience icon" class="icon"
@@ -140,7 +141,7 @@
                 </div>
                 <div class="details-containers">
                     <h2 class="experience-sub-title">Fellow Mentor</h2> 
-                    <p><br><br><br><br>Selected as a standout candidate from a pool of 130 through a rigorous selection process.<br><br>Mentored, coached, and significantly influenced the knowledge, skills, and mindsets of 14 fellows, positively impacting 550+ students through tailored support within our Community of Practice.<br><br>Developed comprehensive channels for need analysis, collecting detailed data, and analyzed it to formulate agendas. Collaborated with 14 Fellow Mentors and Grade Track Team, aligning sessions with diverse trends.<br><br>Ran sessions across 6 months to enhance teaching skills and refine content proficiency of year 1 intervention Instructors in Literacy and Numeracy. Engaged in bi-monthly Check-Ins to establish a resilient support system.</p>
+                    <p>Selected as a standout candidate from a pool of 130 through a rigorous selection process.<br><br>Mentored, coached, and significantly influenced the knowledge, skills, and mindsets of 14 fellows, positively impacting 550+ students through tailored support within our Community of Practice.<br><br>Developed comprehensive channels for need analysis, collecting detailed data, and analyzed it to formulate agendas. Collaborated with 14 Fellow Mentors and Grade Track Team, aligning sessions with diverse trends.<br><br>Ran sessions across 6 months to enhance teaching skills and refine content proficiency of year 1 intervention Instructors in Literacy and Numeracy. Engaged in bi-monthly Check-Ins to establish a resilient support system.</p>
                     <div class="article-container">
                         <article>
                             <img src="./assets/Experience  Capacity Buildingskill icon.png" alt="Experience icon" class="icon"
@@ -188,7 +189,7 @@
                 </div>
                 <div class="details-containers">
                     <h2 class="experience-sub-title">Elementary Teachers Committee </h2> 
-                    <p><br><br>Actively collaborated with the Elementary Track Team and diverse Program Managers to strategize and coordinate the planning of training spaces for 130+ elementary fellows in the city.<br><br>Executed and demonstrated various exemplary practices from my classroom to elevate learning outcomes for over 65 early elementary fellows, impacting 2000+ students across Delhi.<br><br>Led focused small group discussions to encourage depth in Early Elementary training spaces over the last 1.5 year.<br><br>Proactively utilized platforms to communicate the requirements and needs of early elementary classrooms in Delhi, streamlining the planning and design process for diverse enablers.</p>
+                    <p>Actively collaborated with the Elementary Track Team and diverse Program Managers to strategize and coordinate the planning of training spaces for 130+ elementary fellows in the city.<br><br>Executed and demonstrated various exemplary practices from my classroom to elevate learning outcomes for over 65 early elementary fellows, impacting 2000+ students across Delhi.<br><br>Led focused small group discussions to encourage depth in Early Elementary training spaces over the last 1.5 year.<br><br>Proactively utilized platforms to communicate the requirements and needs of early elementary classrooms in Delhi, streamlining the planning and design process for diverse enablers.</p>
                     <div class="article-container">
                         <article>
                             <img src="./assets/Experience Facilitation skill icon.png" alt="Experience icon" class="icon"
