--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
     </section>
     <section id="about">
-        <p class="section__text__p1">Get to Know More</p>
+        <p class="section__text__p1">Get to Know </p>
         <h1 class="title">About Me</h1>
         <div class="section-container">
             <div class="section__pic-container">
